# python-type-annotations-examples

./: README.md  main.py  monkeytype_example.py  mypy_example.py  pyproject.toml
a/: typed_vs_untyped.py
b/: simple_types.py
c/: new_types.py
d/: callable.py
e/: classes.py
f/: generic.py
g/: decorator.py
h/: overload.py
